[package]
name = "bevy-glsl-to-spirv"
version = "0.2.0"
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>", "The vulkano contributors", "Carter Anderson <mcanders1@gmail.com>", "Nicholas Rishel <rishel.nick@gmail.com>"]
description = "Deprecated. This crate is a temporary measure until native rust shader compilation like https://github.com/gfx-rs/naga lands."
repository = "https://github.com/cart/glsl-to-spirv"
license = "MIT/Apache-2.0"
build = "build.rs"
categories = ["rendering::graphics-api"]
edition = "2018"

[build-dependencies]
unzpack = "0.1.0"
ureq = { version = "1.5.1", default-features = false, features = ["tls"] }
