[package]
name = "bevy-glsl-to-spirv"
version = "0.2.2"
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>", "The vulkano contributors", "Carter Anderson <mcanders1@gmail.com>", "Nicholas Rishel <rishel.nick@gmail.com>", "Martin Krisnanto Putra <grygrflzr@hotmail.com>"]
description = "Deprecated. This crate is a temporary measure until native rust shader compilation like https://github.com/gfx-rs/naga lands."
repository = "https://github.com/cart/glsl-to-spirv"
license = "MIT/Apache-2.0"
categories = ["rendering::graphics-api"]
edition = "2018"

[lib]
name = "glsl_to_spirv"

[dependencies]
# Default panic message handling
glslang_actual_builder = { path = "glslang_actual_builder", default-features = false }

# Supported Platforms
[target.x86_64-pc-windows-msvc.dependencies]
glslang_actual_builder = { path = "glslang_actual_builder", default-features = false }

[target.x86_64-unknown-linux-gnu.dependencies]
glslang_actual_builder = { path = "glslang_actual_builder", default-features = false }

[target.x86_64-apple-darwin.dependencies]
glslang_actual_builder = { path = "glslang_actual_builder", default-features = false }

[target.aarch64-linux-android.dependencies]
glslang_actual_builder = { path = "glslang_actual_builder", default-features = false }

[target.armv7-linux-androideabi.dependencies]
glslang_actual_builder = { path = "glslang_actual_builder", default-features = false }

[target.i686-pc-windows-msvc.dependencies]
glslang_actual_builder = { path = "glslang_actual_builder", features = ["build-from-source"] }
